--- a/index.html
+++ b/index.html
@@ -591,14 +591,7 @@ div_cont.remove();
             termBody.appendChild(messageDiv)
             }
             else if(prev_value_value ==='resume' ){
-                const messageDiv = document.createElement('div')
-            messageDiv.classList.add('resume-img')
-            
-            const paragra = document.createElement('img')
-            paragra.src ="./Screenshot 2024-06-21 203937.png";
-            messageDiv.appendChild(paragra)
-
-            termBody.appendChild(messageDiv)
+           location.href = './resume.html'
             }
             else if(prev_value_value==='chat' || prev_value_value==='Chat'){
                 location.href="https://serv-application.onrender.com/"
