--- a/resume.html
+++ b/resume.html
@@ -146,6 +146,10 @@ font-family: "IBM Plex Sans", sans-serif;;
             height: 485px;
             background-color: rgb(9, 9, 9);
         }
+        a{
+            text-decoration: none;
+            color: rgb(188, 191, 195);
+        }
     </style>
 </head>
 <body>
@@ -156,7 +160,7 @@ font-family: "IBM Plex Sans", sans-serif;;
 <p id="job-desc">Web Developer</p>
 <p id="contact"><i class="fa-solid fa-envelope"></i><span id="it">emailAdress@gmail.com</span></p>
 <p id="contact"><i class="fa-solid fa-phone"></i><span id="it">0839795056</span></p>
-<p id="contact"><i class="fa-solid fa-globe"></i></i><span id="it"><a>link to portfolio</a></span></p>
+<p id="contact"><i class="fa-solid fa-globe"></i></i><span id="it"><a href="https://that056.github.io/port/">Portfolio</a></span></p>
 <p id="contact"><i class="fa-solid fa-location-dot"></i><span id="it"><a>Pretoria,Soshanguve</a></span></p>
 
 
