--- a/resume.html
+++ b/resume.html
@@ -205,7 +205,7 @@ font-family: "IBM Plex Sans", sans-serif;;
 
                 <h4 id="c-objective">Career Objective</h4>
                 <p id="obj-message">
-                    As a dedicated web developer, my objective is to apply my expertise in front-end technologies like HTML, CSS, and JavaScript to build compelling and user-friendly websites. With a solid foundation in responsive design principles and hands-on experience in back-end technologies such as PHP or Python, I am eager to contribute effectively to web development projects. I am committed to expanding my skills further, particularly in frameworks like React, to enhance my capabilities and deliver high-quality, scalable solutions. Seeking opportunities within a supportive team environment where I can learn and grow professionally is my priority as I advance in my career in web development.
+                    As a dedicated web developer, my objective is to apply my expertise in front-end technologies like HTML, CSS, and JavaScript to build compelling and user-friendly websites. I am eager to contribute effectively to web development projects. I am committed to expanding my skills further, particularly in frameworks like React, to enhance my capabilities and deliver high-quality, scalable solutions. Seeking opportunities within a supportive team environment where I can learn and grow professionally is my priority as I advance in my career in web development.
                 </p>
 
             </div>
